--- a/caching-cdn/index.html
+++ b/caching-cdn/index.html
@@ -6,6 +6,7 @@
   <body>
     <h1>Test ASP</h1>
     <p>Un text de ejemplo</p>
+    <h2>Nuevo cambio!</h2>
     <img src="ort.png" />
   </body>
 </html>
